# CPPM-Homeworks

./: .gitignore  README.md  Отзыв_Полевой повыш на ведущего.docx
01/01/: main.cpp
02/02/: Homework#2.vcxproj
02/03/: Homework#3.cpp
03/02/: Homework#2.vcxproj.filters
04/02/: out.txt
05/01/: Homework#1.cpp  Homework#1.vcxproj
05/02/: Homework#2.cpp
05/03/: Homework#3.vcxproj.filters
06/03/: Homework#3.vcxproj
07/02/: 02.sln
08/01/: 01.vcxproj
08/02/: 02.vcxproj.filters
09/01/: 01.vcxproj
10/01/: CMakeLists.txt  my_first_cmake_project.h
11/02/: 02.vcxproj
11/04/: 04.vcxproj
11/05/: CMakeLists.txt
Homework-04/01/: Homewrok#1.vcxproj.filters  in.txt
Homework-04/02/: Homework#2.cpp  Homework#2.vcxproj
Homework-05/02/: Homework#2.vcxproj
Homework-06/01/: math.cpp
Homework-06/03/: Homework#3.cpp  Homework#3.vcxproj.filters
Homework-08/01/: 01.cpp  01.sln
Homework-09/02/: 02.sln
Homework-1/: README.md
Homework-1/Homework#1/: Homework#1.sln  Homework#1.vcxproj  main.cpp
Homework-10/01/: my_first_cmake_project.cpp
Homework-10/02/: CMakeLIsts.txt  my_second_cmake_project.cpp  my_second_cmake_project.h
Homework-10/Task#2/Figures/: CMakeLists.txt
Homework-10/Task#2/Figures/Triangles/: equilateralTriangle.h
Homework-11/01/: 01.vcxproj
Homework-11/02/: 02.vcxproj
Homework-11/03/: 03.cpp  CMakeLists.txt
Homework-11/03/Libs/Leaver/: CMakeLists.txt  Leaver.h
Homework-11/04/: 04.sln  04.vcxproj
Homework-11/05/: 05.cpp  CMakeLists.txt
Homework-11/05/FiguresLib/: CMakeLists.txt  FigureLib.cpp  FigureLib.h  figure.h  quadrangles.h  triangles.h
Homework-11/Task#1/: 01.cpp  01.sln  01.vcxproj
Homework-11/Task#2/: 02.cpp  02.sln
Homework-11/Task#3/: 03.h
Homework-2/Homework#1/: Homework#1.cpp  Homework#1.vcxproj  Homework#1.vcxproj.filters
Homework-2/Homework#2/: Homework#2.cpp
Homework-2/Homework#3/: Homework#3.cpp  Homework#3.sln
Homework-2/Task#1/: Homework#1.sln
Homework-2/Task#2/: Homework#2.sln
Homework-2/Task#3/: Homework#3.vcxproj
Homework-3/Homework#1/: Homework#1.cpp
Homework-3/Homework#2/: Homework#2.cpp  Homework#2.vcxproj
Homework-3/Task#1/: Homework#1.sln  Homework#1.vcxproj
Homework-3/Task#2/: Homework#2.cpp  Homework#2.sln
Homework-4/Homework#1/: Homewrok#1.cpp  Homewrok#1.sln  out.txt
Homework-4/Homework#2/: Homework#2.cpp  in.txt  out.txt
Homework-4/Task#1/: Homewrok#1.vcxproj
Homework-4/Task#2/: Homework#2.sln
Homework-5/Homework#1/: Homework#1.cpp  Homework#1.sln
Homework-5/Homework#2/: Homework#2.cpp  Homework#2.sln
Homework-7/01/: 01.cpp  (+2 more)
Project/RacingSimulator_CMake_only/: CMakeLists.txt  RacingLib.h  RacingSimulator.cpp
Project/RacingSimulator_CMake_only/Transports/: TRANSPORT.h
(+192 files in other folders)
